--- a/zeleniKljucHakaton/ui/Home/HomeCollectionViewCell.xib
+++ b/zeleniKljucHakaton/ui/Home/HomeCollectionViewCell.xib
@@ -1,21 +1,98 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="HomeCollectionViewCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="HomeCollectionViewCell" customModule="greenKeyApp" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="102" height="80"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
+                <rect key="frame" x="0.0" y="0.0" width="102" height="80"/>
+                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bB3-ds-HLk">
+                        <rect key="frame" x="0.0" y="0.0" width="102" height="80"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sOW-eP-chY">
+                                <rect key="frame" x="1.5" y="1.5" width="99" height="77"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Icon metro-air" translatesAutoresizingMaskIntoConstraints="NO" id="lC0-JJ-QHE" customClass="CachedImageView" customModule="greenKeyApp" customModuleProvider="target">
+                                        <rect key="frame" x="37" y="15" width="25" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="7iM-AP-ba2"/>
+                                            <constraint firstAttribute="width" constant="25" id="Msb-Qr-wat"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Vazduh" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cTY-Zg-I24">
+                                        <rect key="frame" x="5" y="50.5" width="89" height="14.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="lC0-JJ-QHE" firstAttribute="centerX" secondItem="sOW-eP-chY" secondAttribute="centerX" id="9Bz-e3-KGt"/>
+                                    <constraint firstItem="cTY-Zg-I24" firstAttribute="top" secondItem="lC0-JJ-QHE" secondAttribute="bottom" constant="5.5" id="F7l-vm-w1x"/>
+                                    <constraint firstItem="cTY-Zg-I24" firstAttribute="leading" secondItem="sOW-eP-chY" secondAttribute="leading" constant="5" id="W4j-fh-gpP"/>
+                                    <constraint firstAttribute="trailing" secondItem="cTY-Zg-I24" secondAttribute="trailing" constant="5" id="f29-su-c8j"/>
+                                    <constraint firstItem="lC0-JJ-QHE" firstAttribute="top" secondItem="sOW-eP-chY" secondAttribute="top" constant="15" id="k7W-sy-Ge4"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <integer key="value" value="10"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" red="0.78643521250000004" green="0.86247830299999995" blue="0.27727047040000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="sOW-eP-chY" secondAttribute="bottom" constant="1.5" id="ZS1-Kc-W6L"/>
+                            <constraint firstItem="sOW-eP-chY" firstAttribute="leading" secondItem="bB3-ds-HLk" secondAttribute="leading" constant="1.5" id="hBn-rd-yT6"/>
+                            <constraint firstItem="sOW-eP-chY" firstAttribute="top" secondItem="bB3-ds-HLk" secondAttribute="top" constant="1.5" id="p0l-7k-vuy"/>
+                            <constraint firstAttribute="trailing" secondItem="sOW-eP-chY" secondAttribute="trailing" constant="1.5" id="wM2-CK-nKg"/>
+                        </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                <integer key="value" value="10"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                    </view>
+                </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+            <constraints>
+                <constraint firstAttribute="trailing" secondItem="bB3-ds-HLk" secondAttribute="trailing" id="AUO-0k-2oF"/>
+                <constraint firstItem="bB3-ds-HLk" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="Clu-9m-hKy"/>
+                <constraint firstAttribute="bottom" secondItem="bB3-ds-HLk" secondAttribute="bottom" id="aSJ-TJ-7Gh"/>
+                <constraint firstItem="bB3-ds-HLk" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="e7e-mw-d5J"/>
+            </constraints>
+            <size key="customSize" width="102" height="80"/>
+            <userDefinedRuntimeAttributes>
+                <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                    <integer key="value" value="7"/>
+                </userDefinedRuntimeAttribute>
+            </userDefinedRuntimeAttributes>
+            <connections>
+                <outlet property="categoryIcon" destination="lC0-JJ-QHE" id="xKE-El-rx3"/>
+                <outlet property="categoryName" destination="cTY-Zg-I24" id="qyj-pe-JYK"/>
+            </connections>
+            <point key="canvasLocation" x="169.56521739130437" y="103.79464285714285"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <image name="Icon metro-air" width="33" height="27"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
