--- a/zeleniKljucHakaton/ui/Home/HomeViewController.xib
+++ b/zeleniKljucHakaton/ui/Home/HomeViewController.xib
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HomeViewController" customModule="greenKeyApp" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HomeViewController" customModule="zeleniKljucHakaton" customModuleProvider="target">
             <connections>
                 <outlet property="collectionView" destination="aNK-xX-qmR" id="uZw-JP-K6a"/>
                 <outlet property="scrollView" destination="y9s-T6-hJ8" id="Uj0-jZ-Ia7"/>
