--- a/zeleniKljucHakaton/ui/CategoriesInformations/CategoriesInformationsViewController.xib
+++ b/zeleniKljucHakaton/ui/CategoriesInformations/CategoriesInformationsViewController.xib
@@ -8,9 +8,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CategoriesInformationsViewController" customModule="greenKeyApp" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CategoriesInformationsViewController" customModule="zeleniKljucHakaton" customModuleProvider="target">
             <connections>
                 <outlet property="categoryDescription" destination="tIo-m3-hS2" id="tZe-ZR-DBa"/>
+                <outlet property="categoryIcon" destination="HCf-O1-Jf5" id="Vzg-s9-5PU"/>
                 <outlet property="categoryTitle" destination="gqM-10-4T1" id="tW6-XH-43f"/>
                 <outlet property="tableView" destination="kG9-H9-ykN" id="EEz-yS-uyL"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
@@ -21,8 +22,8 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gqM-10-4T1">
-                    <rect key="frame" x="25" y="54" width="364" height="29"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gqM-10-4T1">
+                    <rect key="frame" x="25" y="54" width="49" height="29"/>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
@@ -37,23 +38,32 @@
                     <rect key="frame" x="25" y="194" width="364" height="643"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                 </tableView>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="HCf-O1-Jf5" customClass="CachedImageView" customModule="zeleniKljucHakaton" customModuleProvider="target">
+                    <rect key="frame" x="84" y="54" width="30" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="9DY-gi-JIH"/>
+                        <constraint firstAttribute="width" constant="30" id="T5q-Fk-7hr"/>
+                        <constraint firstAttribute="height" constant="30" id="hkW-gj-VQd"/>
+                    </constraints>
+                </imageView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="gqM-10-4T1" secondAttribute="trailing" constant="25" id="2Yv-hA-ZDg"/>
                 <constraint firstItem="kG9-H9-ykN" firstAttribute="top" secondItem="tIo-m3-hS2" secondAttribute="bottom" constant="30" id="2gI-8G-3RA"/>
                 <constraint firstItem="tIo-m3-hS2" firstAttribute="top" secondItem="gqM-10-4T1" secondAttribute="bottom" constant="20" id="EJR-5b-ZXD"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="kG9-H9-ykN" secondAttribute="trailing" constant="25" id="Hb9-xB-2zQ"/>
                 <constraint firstItem="gqM-10-4T1" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="10" id="ItL-nZ-hBH"/>
                 <constraint firstItem="kG9-H9-ykN" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="25" id="JyQ-lV-15o"/>
                 <constraint firstItem="tIo-m3-hS2" firstAttribute="top" secondItem="gqM-10-4T1" secondAttribute="bottom" constant="20" id="LD1-5C-vx1"/>
+                <constraint firstItem="HCf-O1-Jf5" firstAttribute="leading" secondItem="gqM-10-4T1" secondAttribute="trailing" constant="10" id="c1m-3N-5d7"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="kG9-H9-ykN" secondAttribute="bottom" constant="25" id="cFA-Sg-GBh"/>
                 <constraint firstItem="tIo-m3-hS2" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="25" id="fcJ-HP-c48"/>
+                <constraint firstItem="HCf-O1-Jf5" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="10" id="g1H-MF-xDn"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="tIo-m3-hS2" secondAttribute="trailing" constant="25" id="lQO-GZ-hTs"/>
                 <constraint firstItem="gqM-10-4T1" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="25" id="y0Z-1s-eo3"/>
             </constraints>
-            <point key="canvasLocation" x="132" y="97"/>
+            <point key="canvasLocation" x="131.8840579710145" y="96.428571428571431"/>
         </view>
     </objects>
     <resources>
