--- a/zeleniKljucHakaton/ui/Partners/PartnersViewController.xib
+++ b/zeleniKljucHakaton/ui/Partners/PartnersViewController.xib
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PartnersViewController" customModule="zeleniKljuc" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PartnersViewController" customModule="zeleniKljucHakaton" customModuleProvider="target">
             <connections>
                 <outlet property="collectionView" destination="8Dx-Yz-hTr" id="BOz-mY-4ON"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
